crates/carta/tests/snapshots/golden_e2e__rtf__native__hyperlink-space.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Link
        ( "" , [] , [] )
        [ Str "link" , Space ]
        ( "http://x.com" , "" )
    , Str "after"
    ]
, Para
    [ Link
        ( "" , [] , [] )
        [ Space , Str "lead" ]
        ( "http://y.com" , "" )
    , Str "tail"
    ]
, Para
    [ Strong
        [ Link
            ( "" , [] , [] )
            [ Str "bold" , Space , Str "link" , Space ]
            ( "http://z.com" , "" )
        ]
    , Str "next"
    ]
]
