crates/carta/tests/snapshots/golden_e2e__rtf__native__hyperlink.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "Visit"
    , Space
    , Link
        ( "" , [] , [] )
        [ Str "the" , Space , Str "site" ]
        ( "http://example.com" , "" )
    , Space
    , Str "for"
    , Space
    , Str "more."
    ]
]
