crates/carta/tests/snapshots/golden_e2e__rtf__native__image-binary.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "before"
    , Space
    , Image
        ( "" , [] , [] )
        [ Str "image" ]
        ( "9a51c9653b72c164609958137e451b35168e28b7.png" , "" )
    , Str "after"
    ]
]
