crates/carta/tests/snapshots/golden_e2e__rtf__native__image-goal-size.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "Photo"
    , Space
    , Image
        ( ""
        , []
        , [ ( "width" , "1.0in" ) , ( "height" , "0.5in" ) ]
        )
        [ Str "image" ]
        ( "4caece539b039b16e16206ea2478f8c5ffb2ca05.png" , "" )
    , Space
    , Str "and"
    , Space
    , Image
        ( "" , [] , [ ( "width" , "2.0in" ) ] )
        [ Str "image" ]
        ( "30567f6b52af60449a6113d3c80fb9f850b7426a.jpg" , "" )
    , Space
    , Str "here."
    ]
]
