crates/carta/tests/snapshots/golden_e2e__rtf__native__image.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "Before"
    , Space
    , Str "pic."
    , Space
    , Image
        ( "" , [] , [] )
        [ Str "image" ]
        ( "0db275746ba70a75bf5175616412bddd5236ced5.png" , "" )
    , Space
    , Str "After"
    , Space
    , Str "pic."
    ]
]
