crates/carta/tests/snapshots/golden_e2e__rtf__native__line-break-trailing.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para [ Str "first" ] , Para [ Str "third" ] ]
