crates/carta/tests/snapshots/golden_e2e__rtf__native__list-adjacent-styles.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ OrderedList
    ( 1 , Decimal , Period )
    [ [ Para [ Str "First" , Space , Str "decimal" ] ]
    , [ Para [ Str "Second" , Space , Str "decimal" ] ]
    ]
, OrderedList
    ( 1 , LowerAlpha , Period )
    [ [ Para [ Str "First" , Space , Str "alpha" ] ]
    , [ Para [ Str "Second" , Space , Str "alpha" ] ]
    ]
]
