crates/carta/tests/snapshots/golden_e2e__rtf__native__list-ordered-alpha.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ OrderedList
    ( 3 , LowerAlpha , Period )
    [ [ Para [ Str "Gamma" ] ] , [ Para [ Str "Delta" ] ] ]
]
