crates/carta/tests/snapshots/golden_e2e__rtf__native__list.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ BulletList
    [ [ Para [ Str "First" , Space , Str "item" ]
      , BulletList
          [ [ Para [ Str "Nested" , Space , Str "item" ] ] ]
      ]
    ]
, BulletList
    [ [ Para [ Str "Third" , Space , Str "item" ] ] ]
]
